[package]
name = "rtiow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.17.0"
rand = { version = "0.8.5", features = ["small_rng"] }
approx = "0.5.1"
indicatif = "0.17.1"
rayon = "1.5.3"